[package]
name = "monitor"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1"
notify = "4"
tonic = "0.5.2"
prost = "0.8"
futures = "0.3"
dotenv = "0.15"
parking_lot = "0.11"
once_cell = "1.8.0"

[dependencies.tracing]
version = "0.2"
git = "https://github.com.cnpmjs.org/tokio-rs/tracing.git"

[dependencies.tracing-appender]
version = "0.2"
git = "https://github.com.cnpmjs.org/tokio-rs/tracing.git"

[dependencies.tracing-subscriber]
version = "0.3"
git = "https://github.com.cnpmjs.org/tokio-rs/tracing.git"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

[dependencies.tokio-stream]
version = "0.1"
features = ["net"]

[build-dependencies]
anyhow = "1"
dotenv = "0.15.0"
tonic-build = "0.5.2"

[profile.release]
lto = true
codegen-units = 1
